# api-simples

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
tests/: conftest.py  test_main.py
